--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Jonas Erixon",
   "license": "ISC",
   "dependencies": {
-    "browserify": "^14.1.0"
+    "browserify": "^14.1.0",
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
