--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Jonas Erixon",
   "license": "ISC",
   "dependencies": {
-    "browserify": "^14.1.0"
+    "browserify": "^14.1.0",
+    "tunajs": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
